--- a/package.json
+++ b/package.json
@@ -5,8 +5,6 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode production",
-    "start": "node server/index.js",
-    "server-dev": "nodemon server/index.js",
     "react-dev": "webpack -d --watch"
   },
   "repository": {
@@ -20,6 +18,8 @@
   },
   "homepage": "https://github.com/theofficetroll/crimbo2020#readme",
   "dependencies": {
+    "babel-loader": "^7.1.5",
+    "babel-preset-es2015": "^6.24.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
@@ -31,8 +31,8 @@
     "css-loader": "^5.0.1",
     "nodemon": "^2.0.6",
     "style-loader": "^2.0.0",
-    "webpack": "^5.10.0",
-    "webpack-cli": "^4.2.0"
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12"
   },
   "keywords": []
 }
